Fixed viewportheigth issues on iOS Safari

--- a/style.css
+++ b/style.css
@@ -2,11 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #202123;
+  background-color: #343541;
+}
+
+@media only screen and (max-width: 600px) {
+  #container, #chatcontainer {
+    height: -webkit-fill-available !important;
+  }
+  
 }
 
 #container {
   height: 100vh;
+  /* height: -webkit-fill-available; */
   background-color: #343541;
   display: flex;
   flex-direction: column;
@@ -16,6 +24,7 @@ body {
 
 #chatcontainer {
   height: 100%;
+  /* height: -webkit-fill-available; */
   width: 100%;
   display: flex;
   flex-direction: column;
